--- a/app/src/main/res/layout/activity_edit_article.xml
+++ b/app/src/main/res/layout/activity_edit_article.xml
@@ -144,6 +144,7 @@
                     android:src="@drawable/icon_take_photo" />
 
                 <ImageView
+                    android:id="@+id/edit_article_to_link"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="@dimen/dp_30"
